# Memoh

./: .air.toml  .dockerignore  .geminiignore  .gitignore  .gitmodules  .golangci.yml  .prettierignore  404.html  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Design-new-setting-test.md  Design-new-setting-two-col.md  Design-new-setting.md  Design-new.md  Dockerfile.agent  Dockerfile.server  Dockerfile.web  PLAN.md  README.md  README_CN.md  README_JA.md  about.html  bump.config.ts  config.docker.toml  config.orchestration-test.toml  config.test.toml  config.toml.example  deploy.sh  docker-compose.kata.yml  docker-compose.sqlite.yml  docker-compose.yaml  docker-compose.yml  eslint.config.mjs  getting-started.html  go.mod  go.sum  hashmap.json  index.html  (+12 more)
.claude/: HANDOFF-chat-scroll.md  PLAN-chat-scroll.md  settings.json
.github/: CODEOWNERS  dependabot.yml
.husky/: check-go  check-go-test  check-large-files  check-pnpm  check-runtime-contract-fixtures  check-ts  check-web  post-merge  pre-commit
agent/: agent.go  package.json
assets/: about.md.diiO3Dj8.js  about.md.diiO3Dj8.lean.js  app.1yWsOLRu.js  app.A7piaGwJ.js  app.B1Uz6bRN.js  app.B2eKQ01Y.js  app.B7XFdPmi.js  app.BCeoDn-v.js  app.BDTLXydf.js  app.BO72G2PE.js  app.BPFk3-Tk.js  app.BPNIC8kR.js  app.BSGpjnt1.js  app.BYjwGnE6.js  app.BhKyjyZV.js  app.Boa-0Gtl.js  app.Bwo_ecyo.js  app.ByBtAnLq.js  app.BytLkqTu.js  app.C-qdOXyL.js  app.C4dbV3jB.js  app.CBu6txs-.js  app.CClFSv5q.js  app.CFQrAvF4.js  app.CIi7iTQc.js  (+149 more)
crates/a11y-cli/: Cargo.toml
crates/a11y-cli/src/: connection.rs  main.rs
(+4538 files in other folders)
