[package]
name = "a11y-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "AT-SPI2 helper used by the Memoh workspace Computer Use tools"
publish = false

[[bin]]
name = "a11y-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
futures-lite = "2"
atspi = { version = "0.30", features = ["zbus"] }
